tests/transpiler/x/java/map_index.error
exit status 1
Main.java:14: error: incompatible types: String cannot be converted to int
        System.out.println(m["b"]);
                             ^
Main.java:14: error: array required, but Data1 found
        System.out.println(m["b"]);
                            ^
2 errors
